--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -9,6 +9,6 @@ RUN echo "FallbackResource index.html" >build/.htaccess
 
 # Production Stage
 FROM nginx:stable-alpine AS production
-COPY --from=build /app/build /usr/share/nginx/html/public
+COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
