--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,8 +22,6 @@ services:
       context: ./LexicalDatabase
     image: tlh/lexical_database
     volumes:
-      - type: bind
-        source: ./LexicalDatabase/data
-        target: /data/data
+      - ./LexicalDatabase/data:/data/data:z
     ports:
       - "127.0.0.1:8080:8080"
