--- a/ui/package.json
+++ b/ui/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-react": "^7.28.0",
     "i18next-parser": "^8.0.0",
+    "nightwatch": "^3.12.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.9.5"
